src/tui/app/snapshots/revu__tui__app__tests__answer_pane.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 150, 20)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at che… ────────╮╭ Claude · explain · charge.rs hunk 1 · cached ────────────╮
│   TO REVIEW                  1 ││  omar · feat/checko… · 2h · +5 −3 · 2 files · ✓ succ ││  It swaps the client for one keyed by the card, so a     │
│ ▎ !42 feat: charge cards at…   ││   1 of 2 approvals · 3 threads, 1 unresolved         ││  retry **reuses** the idempotency key.                   │
│   MINE                       1 ││  ◆ 1 on the MR  enter opens                          ││                                                          │
│   !41 fix: flaky cache test  D ││                                                      ││  • charge now takes the key                              │
│   WATCHING                   1 ││  ▾ src/pay/charge.rs          +4 −2  ◆1 · 1 outdated ││  • nothing else moves                                    │
│   !35 infra: new runner      ⠋ ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge          ││                                                          │
│   DONE ▸                     1 ││ ▎    12   12  pub async fn charge(card: &Card, amou… ││                                                          │
│                                ││  ✓   13      -    let client = Client::new();        ││                                                          │
│                                ││           13 +    let client = Client::with_key(ide… ││                                                          │
│                                ││           14 +    let attempt = Attempt::first();    ││                                                          │
│                                ││      14   15      let response = client.charge(amou… ││                                                          │
│                                ││      15   16      audit::record(&response);          ││                                                          │
│                                ││     ▾ @@ -40,3 +41,4 @@ fn idempotency_key           ││                                                          │
│                                ││      40   41  fn idempotency_key(card: &Card) -> Ke… ││                                                          │
│                                ││      41      -    Key::from(card.number())           ││                                                          │
│                                ││           42 +    Key::from((card.number(), card.ex… ││                                                          │
│                                ││           43 +    // hunk two, line 43 is new        ││  claude-opus-5 · 1.2k cached · 40 out                    │
╰────────────────────────────────╯╰──────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
 ✓ asking Claude (claude-opus-5) · this MR goes to Anthropic                                                                                   ? help
