src/tui/app/snapshots/revu__tui__app__tests__description_modal.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 40)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ success                    │
│ ▎ feat charge cards at chec…   ││   1 of 2 approvals · 3 threads, 1 unresolved                                       │
│ ▎ omar · !42 · +412 −38     2h ││  ◆ 1 on the MR  enter opens                                                        │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││ ▎▾ src/pay/charge.rs                                        +4 −2  ✓1 · 1 outdated │
│   fix flaky cache test       D ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge                                        │
│   nina · !41 · +3 −1        4h ││      12   12  pub async fn charge(card: &Card, amount: Money) -> Result<Receipt> { │
│     ╭ !42 feat: charge cards at checkout ──────────────────────────────────────────────────────────────────────╮     │
│   ──│                                                                                                          │     │
│   in│  omar  feat/checkout → main  2h                                                                          │     │
│   om│                                                                                                          │     │
│     │  ## Why                                                                                                  │     │
│   ──│                                                                                                          │     │
│     │  Cards were charged twice.                                                                               │     │
│     │                                                                                                          │     │
│     │  • retry with idempotency_key                                                                            │     │
│     │  • log the attempt                                                                                       │     │
│     │                                                                                                          │     │
│     │  CHECKS                                                                                                  │     │
│     │  ✓ success                                                                                               │lded │
│     │                                                                                                          │     │
│     │  REVIEW                                                                                                  │     │
│     │  1 of 2 approvals  ·  you are not a reviewer                                                             │     │
│     │                                                                                                          │     │
│     │  THREADS  1 open                                                                                         │     │
│     │  ▎ lea · Should this retry on timeout?                                                                   │     │
│     │  ▎ charge.rs (outdated)                                                                                  │     │
│     │                                                                                                          │     │
│     ╰ src/pay/charge.rs (outdated) · enter go there · esc close ───────────────────────────────────────────────╯     │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved                                                                                ? help
