src/tui/app/snapshots/revu__tui__app__tests__every_thread_mine_empty.snap
---
source: src/tui/app/tests.rs
expression: none
---

 the whole MR · mine · 0 of 3 threads

  you take part in no thread · m shows them all
