src/tui/app/snapshots/revu__tui__app__tests__file_tree.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 20)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: cha… ────────╮╭ Files · 1/2 viewed ────────────────────────╮
│   TO REVIEW                  1 ││  omar · 2h · +5 −3 · 2 files · ✓ suc ││  ▾ src/                                    │
│ ▎ !42 feat: charge cards at…   ││   1 of 2 approvals · 3 threads, 1 un ││    ▾ pay/                                  │
│   MINE                       1 ││                                      ││ ▎      charge.rs                +4 −2 ◆2 ✓ │
│   !41 fix: flaky cache test  D ││                                      ││    Cargo.lock                        +1 −1 │
│   WATCHING                   1 ││ ▎▸ src/pay/charg…  +4 −2  ◆2  viewed ││                                            │
│   !35 infra: new runner      ⠋ ││                                      ││                                            │
│   DONE ▸                     1 ││  ▸ Cargo.lock          +1 −1  folded ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
│                                ││                                      ││                                            │
╰────────────────────────────────╯╰──────────────────────────────────────╯╰────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved                                                                                ? help
